--- a/Bootstrap5MultiSelectExample/Bootstrap5MultiSelectExample.csproj
+++ b/Bootstrap5MultiSelectExample/Bootstrap5MultiSelectExample.csproj
@@ -7,11 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="readme.md" />
     <None Remove="Stash.md" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="readme.md" />
     <Content Include="Stash.md" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="assets\" />
   </ItemGroup>
 
 </Project>
