--- a/Bootstrap5ModalExample/Properties/launchSettings.json
+++ b/Bootstrap5ModalExample/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "Login1",
+      "launchUrl": "SocialSecurityPage",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
