git ignoring file

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Bootstrap5MultiSelectExample/Stash.md
+/Bootstrap5ModalExample/Stash/readme.md
