added new sample

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /Bootstrap5MultiSelectExample/Stash.md
 /Bootstrap5ModalExample/Stash/readme.md
+/Bootstrap5ModalExample/Stash/SocialSecurityPage.txt
