--- a/Bootstrap5ModalExample/Bootstrap5ModalExample.csproj
+++ b/Bootstrap5ModalExample/Bootstrap5ModalExample.csproj
@@ -12,10 +12,12 @@
 
 	<ItemGroup>
 	  <None Remove="readme.md" />
+	  <None Remove="Stash\readme.md" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Content Include="readme.md" />
+	  <Content Include="Stash\readme.md" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="SeriLogThemesLibrary" Version="1.0.0.1" />
