--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,5 @@ FodyWeavers.xsd
 /Bootstrap5MultiSelectExample/Stash.md
 /Bootstrap5ModalExample/Stash/readme.md
 /Bootstrap5ModalExample/Stash/SocialSecurityPage.txt
+/DarkMLightMode/Stash/readme.md
+/Bootstrap5ColumnsExamples/Stash/readme.md
