--- a/LoginFormsApp/LoginFormsApp.csproj
+++ b/LoginFormsApp/LoginFormsApp.csproj
@@ -37,4 +37,7 @@
 		<PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="wwwroot\images\" />
+	</ItemGroup>
 </Project>
