--- a/Bootstrap5ModalExample/Bootstrap5ModalExample.csproj
+++ b/Bootstrap5ModalExample/Bootstrap5ModalExample.csproj
@@ -29,6 +29,7 @@
 	<ItemGroup>
 		<PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+		<PackageReference Include="Spectre.Console" Version="0.50.0" />
 	</ItemGroup>
 
 	<ItemGroup>
